[project]
name = "dreams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.25.0",
    "fire>=0.7.0",
    "h5py>=3.13.0",
    "huggingface-hub>=0.32.4",
    "igraph>=0.11.8",
    "matchms>=0.30.0",
    "molplotly>=1.1.7",
    "msml",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandarallel>=1.6.5",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "pyopenms>=3.4.0",
    "pytorch-lightning>=2.5.1.post0",
    "rdkit>=2024.9.6",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchmetrics>=1.7.2",
    "umap-learn>=0.5.7",
    "wandb>=0.19.11",
]

[tool.uv.sources]
msml = { git = "https://github.com/roman-bushuiev/msml_legacy_architectures.git", rev = "main" }
